change from delete method in folder and file classes to deleteFile respective deleteFolder
